Clean up examples/http_server_plack: consolidate test and docs
- Move test script from dev/sandbox/http_server/test_netty_handler.pl to test.pl
  (examples directory is now the canonical test location)
- Delete old Plack/Handler/Netty.pm copy (now bundled in src/main/perl/lib/)
- Delete old Java class directory (now in src/main/java/)
- Update README.md to reflect current working implementation:
  - Remove outdated Makefile instructions
  - Point to bundled implementation in JAR
  - Add troubleshooting section
  - Simplify quick start instructions
  - Document that tests work out of the box

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>